z-index correct

--- a/src/app.css
+++ b/src/app.css
@@ -37,7 +37,7 @@ img {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -100;
+    z-index: 100;
 }
 
 .content {
