--- a/src/components/Blog/blog.css
+++ b/src/components/Blog/blog.css
@@ -1,5 +1,7 @@
 .blog {
-	margin-top: 20px;
+    position: relative;
+    margin-top: 20px;
+    z-index: 1000;
 }
 
 .blog__title {
