--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -1,3 +1,5 @@
 .post {
+    position: relative;
+    z-index: 1000;
     margin-top: 20px;
 }
